src-tauri/err4.txt
cargo :     Checking 
portpal v0.1.0 (C:\Users\a
ouko\Documents\Projects\Po
rt 
Watcher\PortPal\src-tauri)
At line:1 char:46
+ $env:Path += ";$env:USER
PROFILE\.cargo\bin"; 
cargo check 2>&1 | Out-F 
...
+                         
                     
~~~~~~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (   
     Checking po...tPal   
 \src-tauri):String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
error[E0277]: the trait 
bound `TrafficState: 
serde::Serialize` is not 
satisfied
   --> src\tray.rs:151:63
    |
151 |                 let 
_ = app_handle.emit("tray-
state-changed", 
new_state.clone());
    |                     
               ----       
                
^^^^^^^^^^^^^^^^^ 
unsatisfied trait bound
    |                     
               |
    |                     
               required 
by a bound introduced by 
this call
    |
help: the trait 
`Serialize` is not 
implemented for 
`TrafficState`
   --> src\tray.rs:9:1
    |
  9 | pub enum 
TrafficState {
    | 
^^^^^^^^^^^^^^^^^^^^^
    = note: for local 
types consider adding `#[d
erive(serde::Serialize)]` 
to your `TrafficState` 
type
    = note: for types 
from other crates check 
whether the crate offers 
a `serde` feature flag
    = help: the following 
other types implement 
trait `Serialize`:
              &'a T
              &'a mut T
              ()
              (T,)
              (T0, T1)
              (T0, T1, T2)
              (T0, T1, 
T2, T3)
              (T0, T1, 
T2, T3, T4)
            and 370 others
note: required by a bound 
in `emit`
   --> C:\Users\aouko\.car
go\registry\src\index.crat
es.io-1949cf8c6b5b557f\tau
ri-2.10.3\src\lib.rs:952:1
4
    |
952 |   fn emit<S: 
Serialize + Clone>(&self, 
event: &str, payload: S) 
-> Result<()> {
    |              
^^^^^^^^^ required by 
this bound in 
`Emitter::emit`
    = note: the full name 
for the type has been 
written to 'C:\Users\aouko
\Documents\Projects\Port W
atcher\PortPal\src-tauri\t
arget\debug\deps\portpal-c
ef712f9d857cba0.long-type-
9824583158229454559.txt'
    = note: consider 
using `--verbose` to 
print the full type name 
to the console

For more information 
about this error, try 
`rustc --explain E0277`.
error: could not compile 
`portpal` (bin "portpal") 
due to 1 previous error
